--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,4 @@
 stages:
-  - setup
   - test
   - build
   - deploy
@@ -10,43 +9,21 @@ variables:
   IMAGE_NAME: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   SPRING_PROFILES_ACTIVE: ${CI_COMMIT_REF_SLUG}
 
-maven_setup_job:
-  stage: setup
-  image: maven:3.6.3-jdk-11-slim
-  cache:
-    key: maven:v1
-    paths:
-      - .m2/repository/
-  script:
-    - echo "Setup is done !"
-
 maven_test_job:
   stage: test
   image: maven:3.6.3-jdk-11-slim
-  cache:
-    key: maven:v1
-    paths:
-      - .m2/repository/
   only:
     changes:
       - greeting/**/*
-  dependencies:
-    - maven_setup_job
   script:
     - mvn $MAVEN_CLI_OPTS test -B -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
 maven_build_job:
   stage: build
   image: maven:3.6.3-jdk-11-slim
-  cache:
-    key: maven:v1
-    paths:
-      - .m2/repository/
   only:
     changes:
       - greeting/**/*
-  dependencies:
-    - maven_test_job
   script:
     - mvn $MAVEN_CLI_OPTS clean package -DskipTests=true -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}
   artifacts:
@@ -58,7 +35,9 @@ maven_build_job:
 docker_build_job:
   variables:
     DOCKER_DRIVER: overlay2
-  stage: build
+  stage: deploy
+  dependencies:
+    - maven_build_job
   image: docker:19.03.13-dind
   services:
     - name: docker:19.03.13-dind
