--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,7 +82,7 @@ maven_release_job:
     #    - git config --global user.name ${RELEASE_USER_NAME}
     #    - git config --global user.email ${RELEASE_USER_EMAIL}
   script:
-    - ssh git@gitlab.com
+    - ssh -tt git@gitlab.com
     - git clone git@gitlab.com:Nakebenihime/deployment-workshop.git
 #   - git remote set-url origin ssh://git@gitlab.com:Nakebenihime/deployment-workshop.git ${GITLAB_REPOSITORY}
 #   - mvn $MAVEN_CLI_OPTS -s ${MAVEN_SETTINGS_XML} release:clean release:prepare release:perform -DreleaseVersion=${RELEASE_VERSION} -DdevelopmentVersion=${NEXT_SNAPSHOT_VERSION}
