--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,11 +79,11 @@ maven_release_job:
     ##
     ## Optionally, set the git username and email
     ##
-    #    - git config --global user.name ${RELEASE_USER_NAME}
-    #    - git config --global user.email ${RELEASE_USER_EMAIL}
+    - git config --global user.name ${RELEASE_USER_NAME}
+    - git config --global user.email ${RELEASE_USER_EMAIL}
   script:
     - ssh -tt git@gitlab.com
-    - git clone git@gitlab.com:Nakebenihime/deployment-workshop.git
+#   - git clone git@gitlab.com:Nakebenihime/deployment-workshop.git {SSH_GIT_URL}
 #   - git remote set-url origin ssh://git@gitlab.com:Nakebenihime/deployment-workshop.git ${GITLAB_REPOSITORY}
 #   - mvn $MAVEN_CLI_OPTS -s ${MAVEN_SETTINGS_XML} release:clean release:prepare release:perform -DreleaseVersion=${RELEASE_VERSION} -DdevelopmentVersion=${NEXT_SNAPSHOT_VERSION}
   when: manual
