.gitlab-ci.yml : testing release stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,29 +51,29 @@ maven_test_job:
 maven_release_job:
   stage: release
   before_script:
-    ##
-    ## Install ssh-agent if not already installed, it is required by Docker
-    ## (change apt-get to yum if you use an RPM-based image)
-    ##
-    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
-    ##
-    ## Run ssh-agent (inside the build environment)
-    ##
-    - eval $(ssh-agent -s)
-    ##
-    ## Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
-    ##
-    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-    ##
-    ## Create the SSH directory and give it the right permissions
-    ##
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    ##
-    ## Use ssh-keyscan to scan the keys of your private server
-    ##
-    - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
-    - chmod 644 ~/.ssh/known_hosts
+#    ##
+#    ## Install ssh-agent if not already installed, it is required by Docker
+#    ## (change apt-get to yum if you use an RPM-based image)
+#    ##
+#    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+#    ##
+#    ## Run ssh-agent (inside the build environment)
+#    ##
+#    - eval $(ssh-agent -s)
+#    ##
+#    ## Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
+#    ##
+#    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+#    ##
+#    ## Create the SSH directory and give it the right permissions
+#    ##
+#    - mkdir -p ~/.ssh
+#    - chmod 700 ~/.ssh
+#    ##
+#    ## Use ssh-keyscan to scan the keys of your private server
+#    ##
+#    - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
+#    - chmod 644 ~/.ssh/known_hosts
     ##
     ## Install git if not already installed, it is required by Docker
     ##
