--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,6 +85,7 @@ maven_release_job:
     - git config --global user.email ${RELEASE_USER_EMAIL}
   script:
     - git checkout -B ${CI_BUILD_REF_NAME}
+    - echo ${RELEASE_VERSION}:${NEXT_SNAPSHOT_VERSION}
     - mvn $MAVEN_CLI_OPTS -s ${MAVEN_SETTINGS_XML} release:clean release:prepare release:perform -DreleaseVersion=${RELEASE_VERSION} -DdevelopmentVersion=${NEXT_SNAPSHOT_VERSION}
   when: manual
   only:
