--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     </parent>
     <groupId>org</groupId>
     <artifactId>deployment-workshop</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>v1.0.0</version>
     <name>deployment-workshop</name>
     <description>Demo project for Spring Boot</description>
 
@@ -30,7 +30,7 @@
         <connection>scm:git:https://gitlab.com/Nakebenihime/deployment-workshop.git</connection>
         <url>https://gitlab.com/Nakebenihime/deployment-workshop</url>
         <developerConnection>scm:git:https://gitlab.com/Nakebenihime/deployment-workshop.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>vv1.0.0</tag>
   </scm>
 
     <dependencies>
