--- a/greeting/pom.xml
+++ b/greeting/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>deployment-workshop</artifactId>
         <groupId>org</groupId>
-        <version>v1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
