--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,18 +9,126 @@ stages:
 variables:
   MAVEN_OPTS: "-Dhttps.protocols=TLSv1.2 -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true"
-  IMAGE_NAME: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   SPRING_PROFILES_ACTIVE: ${CI_COMMIT_REF_NAME}
 
 setup_job:
   stage: setup
-  variables:
-    IMAGE_NAME: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
-    DOCKER_BUILD_ID: ${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}
   script:
-    - echo ${IMAGE_NAME}
-    - echo ${DOCKER_BUILD_ID}
-    - echo ${CI_BUILD_REF_NAME}
+    - echo ${CHAT_CHANNEL}
+    - echo ${CHAT_INPUT}
+    - echo ${CI}
+    - echo ${CI_API_V4_URL}
+    - echo ${CI_BUILDS_DIR}
+    - echo ${CI_COMMIT_BEFORE_SHA}
+    - echo ${CI_COMMIT_DESCRIPTION}
+    - echo ${CI_COMMIT_MESSAGE}
+    - echo ${CI_COMMIT_REF_NAME}
+    - echo ${CI_COMMIT_REF_PROTECTED}
+    - echo ${CI_COMMIT_REF_SLUG}
+    - echo ${CI_COMMIT_SHA}
+    - echo ${CI_COMMIT_SHORT_SHA}
+    - echo ${CI_COMMIT_BRANCH}
+    - echo ${CI_COMMIT_TAG}
+    - echo ${CI_COMMIT_TITLE}
+    - echo ${CI_COMMIT_TIMESTAMP}
+    - echo ${CI_CONCURRENT_ID}
+    - echo ${CI_CONCURRENT_PROJECT_ID}
+    - echo ${CI_CONFIG_PATH}
+    - echo ${CI_DEBUG_TRACE}
+    - echo ${CI_DEFAULT_BRANCH}
+    - echo ${CI_DEPLOY_FREEZE}
+    - echo ${CI_DEPLOY_PASSWORD}
+    - echo ${CI_DEPLOY_USER}
+    - echo ${CI_DISPOSABLE_ENVIRONMENT}
+    - echo ${CI_ENVIRONMENT_NAME}
+    - echo ${CI_ENVIRONMENT_SLUG}
+    - echo ${CI_ENVIRONMENT_URL}
+    - echo ${CI_EXTERNAL_PULL_REQUEST_IID}
+    - echo ${CI_EXTERNAL_PULL_REQUEST_SOURCE_REPOSITORY}
+    - echo ${CI_EXTERNAL_PULL_REQUEST_TARGET_REPOSITORY}
+    - echo ${CI_EXTERNAL_PULL_REQUEST_SOURCE_BRANCH_NAME}
+    - echo ${CI_EXTERNAL_PULL_REQUEST_SOURCE_BRANCH_SHA}
+    - echo ${CI_EXTERNAL_PULL_REQUEST_TARGET_BRANCH_NAME}
+    - echo ${CI_EXTERNAL_PULL_REQUEST_TARGET_BRANCH_SHA}
+    - echo ${CI_HAS_OPEN_REQUIREMENTS}
+    - echo ${CI_JOB_ID}
+    - echo ${CI_JOB_IMAGE}
+    - echo ${CI_JOB_MANUAL}
+    - echo ${CI_JOB_NAME}
+    - echo ${CI_JOB_STAGE}
+    - echo ${CI_JOB_STATUS}
+    - echo ${CI_JOB_TOKEN}
+    - echo ${CI_JOB_JWT}
+    - echo ${CI_JOB_URL}
+    - echo ${CI_KUBERNETES_ACTIVE}
+    - echo ${CI_MERGE_REQUEST_ASSIGNEES}
+    - echo ${CI_MERGE_REQUEST_ID}
+    - echo ${CI_MERGE_REQUEST_IID}
+    - echo ${CI_MERGE_REQUEST_LABELS}
+    - echo ${CI_MERGE_REQUEST_MILESTONE}
+    - echo ${CI_MERGE_REQUEST_PROJECT_ID}
+    - echo ${CI_MERGE_REQUEST_PROJECT_PATH}
+    - echo ${CI_MERGE_REQUEST_PROJECT_URL}
+    - echo ${CI_MERGE_REQUEST_REF_PATH}
+    - echo ${CI_MERGE_REQUEST_SOURCE_BRANCH_NAME}
+    - echo ${CI_MERGE_REQUEST_SOURCE_BRANCH_SHA}
+    - echo ${CI_MERGE_REQUEST_SOURCE_PROJECT_ID}
+    - echo ${CI_MERGE_REQUEST_SOURCE_PROJECT_PATH}
+    - echo ${CI_MERGE_REQUEST_SOURCE_PROJECT_URL}
+    - echo ${CI_MERGE_REQUEST_TARGET_BRANCH_NAME}
+    - echo ${CI_MERGE_REQUEST_TARGET_BRANCH_SHA}
+    - echo ${CI_MERGE_REQUEST_TITLE}
+    - echo ${CI_MERGE_REQUEST_EVENT_TYPE}
+    - echo ${CI_NODE_INDEX}
+    - echo ${CI_NODE_TOTAL}
+    - echo ${CI_PAGES_DOMAIN}
+    - echo ${CI_PAGES_URL}
+    - echo ${CI_PIPELINE_ID}
+    - echo ${CI_PIPELINE_IID}
+    - echo ${CI_PIPELINE_SOURCE}
+    - echo ${CI_PIPELINE_TRIGGERED}
+    - echo ${CI_PIPELINE_URL}
+    - echo ${CI_PROJECT_DIR}
+    - echo ${CI_PROJECT_ID}
+    - echo ${CI_PROJECT_NAME}
+    - echo ${CI_PROJECT_NAMESPACE}
+    - echo ${CI_PROJECT_ROOT_NAMESPACE}
+    - echo ${CI_PROJECT_PATH}
+    - echo ${CI_PROJECT_PATH_SLUG}
+    - echo ${CI_PROJECT_REPOSITORY_LANGUAGES}
+    - echo ${CI_PROJECT_TITLE}
+    - echo ${CI_PROJECT_URL}
+    - echo ${CI_PROJECT_VISIBILITY}
+    - echo ${CI_REGISTRY}
+    - echo ${CI_REGISTRY_IMAGE}
+    - echo ${CI_REGISTRY_PASSWORD}
+    - echo ${CI_REGISTRY_USER}
+    - echo ${CI_REPOSITORY_URL}
+    - echo ${CI_RUNNER_DESCRIPTION}
+    - echo ${CI_RUNNER_EXECUTABLE_ARCH}
+    - echo ${CI_RUNNER_ID}
+    - echo ${CI_RUNNER_REVISION}
+    - echo ${CI_RUNNER_SHORT_TOKEN}
+    - echo ${CI_RUNNER_TAGS}
+    - echo ${CI_RUNNER_VERSION}
+    - echo ${CI_SERVER}
+    - echo ${CI_SERVER_URL}
+    - echo ${CI_SERVER_HOST}
+    - echo ${CI_SERVER_PORT}
+    - echo ${CI_SERVER_PROTOCOL}
+    - echo ${CI_SERVER_NAME}
+    - echo ${CI_SERVER_REVISION}
+    - echo ${CI_SERVER_VERSION}
+    - echo ${CI_SERVER_VERSION_MAJOR}
+    - echo ${CI_SERVER_VERSION_MINOR}
+    - echo ${CI_SERVER_VERSION_PATCH}
+    - echo ${CI_SHARED_ENVIRONMENT}
+    - echo ${GITLAB_CI}
+    - echo ${GITLAB_FEATURES}
+    - echo ${GITLAB_USER_EMAIL}
+    - echo ${GITLAB_USER_ID}
+    - echo ${GITLAB_USER_LOGIN}
+    - echo ${GITLAB_USER_NAME}
   when: manual
 
 cache:
@@ -51,41 +159,11 @@ maven_test_job:
 maven_release_job:
   stage: release
   before_script:
-#    ##
-#    ## Install ssh-agent if not already installed, it is required by Docker
-#    ## (change apt-get to yum if you use an RPM-based image)
-#    ##
-#    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
-#    ##
-#    ## Run ssh-agent (inside the build environment)
-#    ##
-#    - eval $(ssh-agent -s)
-#    ##
-#    ## Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
-#    ##
-#    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-#    ##
-#    ## Create the SSH directory and give it the right permissions
-#    ##
-#    - mkdir -p ~/.ssh
-#    - chmod 700 ~/.ssh
-#    ##
-#    ## Use ssh-keyscan to scan the keys of your private server
-#    ##
-#    - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
-#    - chmod 644 ~/.ssh/known_hosts
-    ##
-    ## Install git if not already installed, it is required by Docker
-    ##
     - 'which git || (apt-get update && apt-get install -y git)'
-    ##
-    ## Optionally, set the git username and email
-    ##
     - git config --global user.name ${RELEASE_USER_NAME}
     - git config --global user.email ${RELEASE_USER_EMAIL}
   script:
     - git checkout -B ${CI_BUILD_REF_NAME}
-    - echo ${RELEASE_VERSION}:${NEXT_SNAPSHOT_VERSION}
     - mvn $MAVEN_CLI_OPTS -s ${MAVEN_SETTINGS_XML} release:clean release:prepare release:perform -DreleaseVersion=${RELEASE_VERSION} -DdevelopmentVersion=${NEXT_SNAPSHOT_VERSION}
   when: manual
   only:
@@ -102,68 +180,10 @@ docker_build_job:
     changes:
       - greeting/**/*
   before_script:
-    - docker login -u ${CI_USER} -p ${CI_TOKEN} ${CI_REGISTRY}
     - docker info
+    - docker login -u ${CI_USER} -p ${CI_TOKEN} ${CI_REGISTRY}
   script:
     - docker build -t ${CI_REGISTRY}/nakebenihime/deployment-workshop/greeting-webservice -f greeting/Dockerfile .
     - docker push ${CI_REGISTRY}/nakebenihime/deployment-workshop/greeting-webservice
   after_script:
     - docker logout ${CI_REGISTRY}
-
-#ssh-deploy-qualification:
-#  stage: deploy
-#  image: kroniak/ssh-client
-#  variables:
-#    SPRING_PROFILES_ACTIVE: qualification
-#  environment:
-#    name: qualification
-#    url: x
-#  only:
-#    refs:
-#      - branches
-#    changes:
-#      - greeting/**/*
-#  except:
-#    refs:
-#      - master
-#  before_script:
-#    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
-#    - eval $(ssh-agent -s)
-#    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-#    - mkdir -p ~/.ssh
-#    - chmod 700 ~/.ssh
-#    - ssh-keyscan -t rsa ${SSH_REMOTE_HOST} >> ~/.ssh/known_hosts
-#    - chmod 644 ~/.ssh/known_hosts
-#  script:
-#    - ssh deployer@${SSH_REMOTE_HOST} "docker login -u ${CI_USER} -p ${CI_TOKEN} ${CI_REGISTRY}"
-#    - ssh deployer@${SSH_REMOTE_HOST} "docker pull ${CI_REGISTRY}/nakebenihime/deployment-workshop/greeting-service"
-#    - ssh deployer@${SSH_REMOTE_HOST} 'docker stop $(docker ps -aq)' || true
-#    - ssh deployer@${SSH_REMOTE_HOST} "docker run  --rm -d -p ${PORT}:8080 --name ${APP_NAME} -e SPRING_PROFILES_ACTIVE=${SPRING_ACTIVE_PROFILE} ${CI_REGISTRY}/nakebenihime/deployment-workshop/greeting-service"
-#
-#ssh-deploy-production:
-#  stage: deploy
-#  image: kroniak/ssh-client
-#  variables:
-#    SPRING_PROFILES_ACTIVE: production
-#  environment:
-#    name: production
-#    url: x
-#  only:
-#    refs:
-#      - master
-#    changes:
-#      - greeting/**/*
-#  before_script:
-#    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
-#    - eval $(ssh-agent -s)
-#    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-#    - mkdir -p ~/.ssh
-#    - chmod 700 ~/.ssh
-#    - ssh-keyscan -t rsa ${SSH_REMOTE_HOST} >> ~/.ssh/known_hosts
-#    - chmod 644 ~/.ssh/known_hosts
-#  script:
-#    - ssh deployer@${SSH_REMOTE_HOST} "docker login -u ${CI_USER} -p ${CI_TOKEN} ${CI_REGISTRY}"
-#    - ssh deployer@${SSH_REMOTE_HOST} "docker pull ${CI_REGISTRY}/nakebenihime/deployment-workshop/greeting-service"
-#    - ssh deployer@${SSH_REMOTE_HOST} 'docker stop $(docker ps -aq)' || true
-#    - ssh deployer@${SSH_REMOTE_HOST} "docker run  --rm -d -p ${PORT}:8080 --name ${APP_NAME} -e SPRING_PROFILES_ACTIVE=${SPRING_ACTIVE_PROFILE} ${CI_REGISTRY}/nakebenihime/deployment-workshop/greeting-service"
-#
