--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
@@ -9,7 +10,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.3.4.RELEASE</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org</groupId>
     <artifactId>greeting101</artifactId>
@@ -18,21 +19,28 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
+        <!--            java configuration                  -->
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <!--            scm configuration                   -->
         <project.scm.id>gitlab.repository</project.scm.id>
+        <!--            sonarcloud configuration            -->
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.organization>greeting101</sonar.organization>
+
     </properties>
 
     <scm>
-        <connection>scm:git:https://gitlab.com/Nakebenihime/deployment-workshop.git</connection>
-        <url>https://gitlab.com/Nakebenihime/deployment-workshop</url>
-        <developerConnection>scm:git:https://gitlab.com/Nakebenihime/deployment-workshop.git</developerConnection>
-  </scm>
+        <connection>scm:git:https://github.com/Nakebenihime/greeting101.git</connection>
+        <url>https://github.com/Nakebenihime/greeting101</url>
+        <developerConnection>scm:git:https://github.com/Nakebenihime/greeting101.git</developerConnection>
+    </scm>
 
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -44,15 +52,25 @@
         </dependency>
 
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.4.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-data-rest</artifactId>
+            <version>1.4.8</version>
         </dependency>
 
         <dependency>
