--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 image: maven:3.6.3-jdk-11-slim
 stages:
-  - setup
   - build
   - test
   - release
@@ -10,12 +9,6 @@ variables:
   MAVEN_OPTS: "-Dhttps.protocols=TLSv1.2 -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true"
   SPRING_PROFILES_ACTIVE: ${CI_COMMIT_REF_NAME}
-
-setup_job:
-  stage: setup
-  script:
-    - echo "SETUP IS DONE"
-  when: manual
 
 cache:
   paths:
@@ -41,6 +34,14 @@ maven_test_job:
       - greeting/**/*
   script:
     - mvn $MAVEN_CLI_OPTS verify -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}
+
+maven_sonar_job:
+  stage: test
+  only:
+    changes:
+      - greeting/**/*
+  script:
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.login=${SONAR_TOKEN} -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
 maven_release_job:
   stage: release
