--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,10 +95,10 @@ ssh_deploy_qualification_job:
     - ssh-keyscan -t rsa ${SSH_REMOTE_HOST} >> ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
   script:
-    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} 'docker login -u ${GITLAB_USER_LOGIN} -p ${CI_TOKEN} ${CI_REGISTRY}'
-    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} 'docker pull ${CI_REGISTRY_IMAGE}/greeting-webservice'
+    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker login -u ${GITLAB_USER_LOGIN} -p ${CI_TOKEN} ${CI_REGISTRY}"
+    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker pull ${CI_REGISTRY_IMAGE}/greeting-webservice"
     - ssh ${DEPLOY_USER}$${SSH_REMOTE_HOST} 'docker stop $(docker ps -aq)' || true
-    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} 'docker run  --rm -d -p 8080:8080 --name ${APP_NAME} -e SPRING_PROFILES_ACTIVE=${SPRING_ACTIVE_PROFILE} ${CI_REGISTRY_IMAGE}/greeting-webservice'
+    - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker run  --rm -d -p 8080:8080 --name ${APP_NAME} -e SPRING_PROFILES_ACTIVE=${SPRING_ACTIVE_PROFILE} ${CI_REGISTRY_IMAGE}/greeting-webservice"
   environment:
     name: master
     url: http://${SSH_REMOTE_HOST}
