--- a/greeting/src/main/resources/application-qualification.yml
+++ b/greeting/src/main/resources/application-qualification.yml
@@ -11,6 +11,8 @@ api:
     version: 1.0.0
     description: Hotel API is web service providing online functionality of searching and booking hotels
   contact:
+    name: Mario DA COSTA
+    url: https://github.com/Nakebenihime
     email: mario-dacosta@hotmail.fr
   license:
     name: MIT
