- azure keyvault to store mongodb uri (pom.xml, properties updated)  - programmatically mongodb configuration via mongoclient()

--- a/hotel/src/main/resources/application-master.yml
+++ b/hotel/src/main/resources/application-master.yml
@@ -2,7 +2,6 @@ spring:
   profiles: master
   data:
     mongodb:
-      uri: mongodb+srv://<username>:<password>@clustermongo01.xusit.mongodb.net/hotels-master?retryWrites=true&w=majority
       database: hotels-master
 server:
   port: 8080
@@ -21,3 +20,10 @@ api:
   uri:
     paths:
       hotel: /api/v1/hotels
+azure:
+  keyvault:
+    uri: https://springboot-app-key-vault.vault.azure.net/
+    client-id: 547f8ce7-61a4-4853-8984-6569c8046235
+    client-key: 691d-AQh2f9_P.qFFJLMKESivz0Tr0e1GC
+    tenant-id: 9a201292-e579-4be6-a754-74a17631711a
+    enabled: true
