--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,6 @@
         <!--            sonarcloud configuration            -->
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.organization>greeting101</sonar.organization>
-
     </properties>
 
     <scm>
@@ -59,6 +58,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.azure.spring</groupId>
+            <artifactId>azure-spring-boot-starter-keyvault-secrets</artifactId>
+            <version>3.0.0</version>
         </dependency>
 
         <dependency>
