--- a/hotel/src/main/resources/application-qualification.yml
+++ b/hotel/src/main/resources/application-qualification.yml
@@ -20,3 +20,10 @@ api:
   uri:
     paths:
       hotel: /api/v1/hotels
+azure:
+  keyvault:
+    uri: ${AZURE_KEYVAULT_URI}
+    client-id: ${AZURE_KEYVAULT_CLIENT_ID}
+    client-key: ${AZURE_KEYVAULT_CLIENT_KEY}
+    tenant-id: ${AZURE_KEYVAULT_TENANT_ID}
+    enabled: true
