--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,7 +113,8 @@ ssh_deploy_master_job:
     - chmod 700 ~/.ssh
     - ssh-keyscan -t rsa ${SSH_REMOTE_HOST} >> ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
-    - cat "{MASTER_ENV} >> deploy.env
+    - cat ${MASTER_ENV} >> deploy.env
+    - cat deploy.env
   script:
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker login -u ${GITLAB_USER_LOGIN} -p ${CI_TOKEN} ${CI_REGISTRY}"
     - ssh ${DEPLOY_USER}@${SSH_REMOTE_HOST} "docker pull ${CI_REGISTRY_IMAGE}/hotel"
